# vkVirge

./: .gitignore  CMakeLists.txt  cross_mingw32.txt  main.cpp  meson.build  meson.build.txt
src/ddraw/: ddraw.cpp  ddraw.h  ddraw_clipper.cpp  ddraw_clipper.h  ddraw_guids.cpp  ddraw_impl.h  ddraw_palette.cpp  ddraw_palette.h  ddraw_surface.cpp  ddraw_surface.h  ddraw_trace.cpp  ddraw_utils.cpp  ddraw_utils.h
src/ddvk/: ddvk_blt.cpp  ddvk_blt.h  ddvk_buffer.cpp  ddvk_buffer.h  ddvk_commands.cpp  ddvk_commands.h  ddvk_core.cpp  ddvk_core.h  ddvk_debug.h  ddvk_descriptors.cpp  ddvk_descriptors.h  ddvk_flip.cpp  ddvk_flip.h  ddvk_pipeline.cpp  ddvk_pipeline.h  ddvk_renderer.cpp  ddvk_renderer.h  ddvk_shaders.cpp  ddvk_shaders.h  ddvk_surface.cpp  ddvk_surface.h  ddvk_swapchain.cpp  ddvk_swapchain.h  ddvk_sync.cpp  ddvk_sync.h  ddvk_texture.cpp  ddvk_texture.h  ddvk_utils.cpp  ddvk_utils.h
src/hack/: hack.cpp  hack.h
src/main/: ddraw.def  dllmain.cpp
src/shaders/: blit.frag  blit.vert  clear.frag  fill.frag  fill.vert  texture.frag  texture.vert
src/test/: cube_data.h  dd7fullscreen.cpp  dd7fullscreen_main.cpp  folder.txt  main_ddraw_test.cpp  test_blt_batch.cpp  test_command_stream.cpp  test_ddraw_dll_client.cpp  test_directdraw_iids.cpp  test_gamma.cpp  triangle.cpp  vk_cube.cpp  vk_textures.cpp  vk_triangle.cpp
src/utils/: scaler.cpp  scaler.h
src/vulkan/: folder.txt  stb_image_impl.cpp  vk_images.cpp  vk_images.h  vk_memory.cpp  vk_memory.h  vk_pipeline.cpp  vk_pipeline.h  vk_shaders.cpp  vk_shaders.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h  vk_utils.cpp  vk_utils_core.h  vk_utils_glm.h  vk_window.cpp  vk_window.h  vma_impl.cpp
